--- a/wineshare/src/main/resources/templates/wine/wineForm.html
+++ b/wineshare/src/main/resources/templates/wine/wineForm.html
@@ -64,6 +64,7 @@
             if (wineTypeSelect.value === "RED") {
                 developTanninSelector.style.display = "block";
                 developFizzSelector.style.display = "none";
+                developSweetnessSelector.style.display = "block";
             } else if (wineTypeSelect.value === "SPARKLING") {
                 developFizzSelector.style.display = "block";
                 developSweetnessSelector.style.display = "none";
