--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -33,7 +33,7 @@
               </li>
 
               <li class="active">
-                <span class="mouse-pointer">About Us</span>
+                <a class="mouse-pointer">About Us</a>
                 <ul class="sub-menu">
                   <li><a th:href="@{'/about/aboutUs'}" title="">Wine Share</a></li>
                   <li><a th:href="@{'/boards/notice/list'}" title="notice">공지사항</a></li>
@@ -55,7 +55,7 @@
                 </ul><!-- /.sub-menu -->
               </li>
               <li class="active">
-                <span class="mouse-pointer">Marketing</span>
+                <a class="mouse-pointer">Marketing</a>
                 <ul class="sub-menu">
                   <li><a th:href="@{'/marketings/winebar/list'}" title="">Wine Bar</a></li>
                   <li><a th:href="@{'/marketings/bottleshop/list'}" title="">Bottle Shop</a></li>
@@ -63,7 +63,7 @@
                 </ul><!-- /.sub-menu -->
               </li>
               <li class="active">
-                <span class="mouse-pointer">Boards</span>
+                <a class="mouse-pointer">Boards</a>
                 <ul class="sub-menu">
                   <li><a th:href="@{'/boards/upgrade/list'}" title="">등업게시판</a></li>
                   <li><a th:href="@{'/boards/question/list'}" title="">질문게시판</a></li>
@@ -71,7 +71,7 @@
                 </ul><!-- /.sub-menu -->
               </li>
               <li class="active">
-                <span class="mouse-pointer">Events</span>
+                <a class="mouse-pointer">Events</a>
                 <ul class="sub-menu">
                   <li><a th:href="@{'/marketings/list/event'}" title="">행사</a></li>
                   <li><a th:href="@{'/marketings/list/promotion'}" title="">프로모션</a></li>
@@ -98,7 +98,7 @@
             </li>
 
 
-            <li><a href="#"> <i class="ti-align-justify" aria-hidden="true"></i> </a>
+            <li><a class="mouse-pointer"> <i class="ti-align-justify" aria-hidden="true"></i> </a>
               <ul class="sub-menu">
 
                 <!--        여기가 유저 네임 보여주는 곳 ==========-->
