--- a/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
+++ b/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
@@ -24,7 +24,7 @@
 
 .data-search{
     position: absolute;
-    left:4.5%;
+    left:12%;
 
 }
 
@@ -178,4 +178,9 @@
     margin-bottom: 10%;
 }
 
+.data-type{
+    width:7%;
+    position: absolute;
+    left:4.5%;
+}
 
