--- a/wineshare/src/main/resources/templates/main.html
+++ b/wineshare/src/main/resources/templates/main.html
@@ -24,15 +24,13 @@
         }
 
         .content-post {
-            padding: 20px 20px 0 0 !important;
+            padding: 30px 20px 0 0 !important;
         }
         .flat-next a{
             position: relative;
-            z-index: 999;
+            display: inline-block;
         }
-        .flat-latest .latest-title h3 {
-            z-index: 1;
-        }
+
         .flat-latest .latest-title h3 a {
             pointer-events: none;
         }
@@ -232,10 +230,10 @@
                     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
                         <div class="flat-latest mgb-mobi40">
                             <div class="latest-title mb-mgtop0">
-                                <h3><a>별점순</a></h3>
+                                <h3><a>Top Rating</a></h3>
                             </div>
                             <div class="flat-next">
-                                <a th:href="@{'/wines/list?sortBy=ratingDesc'}" style="display: inline-block;">
+                                <a th:href="@{'/wines/list?sortBy=ratingDesc'}">
                                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
                                 </a>
                             </div>
@@ -274,10 +272,10 @@
                     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
                         <div class="flat-latest mgb-mobi40">
                             <div class="latest-title mb-mgtop0">
-                                <h3><a>인기순</a></h3>
+                                <h3><a>Popular</a></h3>
                             </div>
                             <div class="flat-next">
-                                <a th:href="@{'/wines/list?sortBy=cellarDesc'}" style="display: inline-block;">
+                                <a th:href="@{'/wines/list?sortBy=cellarDesc'}">
                                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
                                 </a>
                             </div>
@@ -316,10 +314,10 @@
                     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
                         <div class="flat-latest mgb-mobi40">
                             <div class="latest-title mb-mgtop0">
-                                <h3><a>최신순</a></h3>
+                                <h3><a>Latest</a></h3>
                             </div>
                             <div class="flat-next">
-                                <a th:href="@{'/wines/list'}" style="display: inline-block;">
+                                <a th:href="@{'/wines/list'}">
                                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
                                 </a>
                             </div>
