점심시간 전 푸시

--- a/wineshare/src/main/resources/static/stylesheets/shortcodes.css
+++ b/wineshare/src/main/resources/static/stylesheets/shortcodes.css
@@ -941,6 +941,8 @@
     font-size: 14px;
     line-height: 48px;
     color: #fff;
+    height:80px;
+    overflow:hidden;
 }
 
 .main-homepage-1 .flat-carousel-box .owl-nav .owl-prev,
