--- a/wineshare/src/main/resources/static/wineshare-css/board-get-form.css
+++ b/wineshare/src/main/resources/static/wineshare-css/board-get-form.css
@@ -42,7 +42,7 @@ th{
 }
 
 .board-form{
-width:80%;
+    width:80%;
     position:relative;
 }
 .board-modify-btn{
@@ -85,4 +85,15 @@ width:80%;
     position:absolute;
     top:5px;
     left:70px;
+}
+
+.admin-agree{
+    border: 1px solid #c02323;
+    border-radius:5px;
+    color: #FFFFFF;
+    padding: 10px 25px;
+    background: #c02323;
+    position:absolute;
+    right:1.5%;
+    top:4%;
 }
