--- a/wineshare/src/main/resources/static/wineshare-css/login-form.css
+++ b/wineshare/src/main/resources/static/wineshare-css/login-form.css
@@ -31,6 +31,7 @@
 
 }
 
+
 /*  회원가입 폼 css  */
 
 .account-container{
@@ -73,6 +74,11 @@
     background: #e5e5e5;
     color: #191919;
     border-radius:5px;
+}
+
+.rrn{
+    width:100%;
+    display: flex;
 }
 
 
