--- a/wineshare/src/main/resources/templates/member/memberForm.html
+++ b/wineshare/src/main/resources/templates/member/memberForm.html
@@ -138,10 +138,11 @@
             <div class="form-group form-group-rrn" th:if="${memberDTO.id == null}">
 
                 <label th:for="RRN">주민등록번호</label>
-                <input type="text" id="rrnFirst" placeholder="000000" maxlength="6" required>
-                <spqn>-</spqn>
-                <input type="password" id="rrnSecond" placeholder="0000000" maxlength="7" required>
-
+                <div class="rrn" >
+                <input type="text" style="width:20%; margin-right:7px;" id="rrnFirst" placeholder="000000" maxlength="6" required>
+                <spqn style="margin-right:7px;">_</spqn>
+                <input type="password" style="width:20%; margin-right:7px;"  id="rrnSecond" placeholder="0000000" maxlength="7" required>
+                </div>
                 <input type="hidden" th:field="*{RRN}">
                 <p th:if="${#fields.hasErrors('RRN')}" th:errors="*{RRN}" class="fieldError">Incorrect data</p>
 
